MAINTAINERCLEANFILES = Makefile.in

EXTRA_DIST = aminstall.sh bsdinst.sh checktree.c chownxterm.c \
	     install.sh lndir.c lndir.man Makefile.in makeg.man makeg.sh \
	     makestrs.c makestrs.man mdepend.cpp mergelib.cpp \
	     mkdirhier.man mkdirhier.sh syminst.sh x11mf.sh \
	     xmkmf.cpp xmkmf.man Makefile.ini

INCLUDES = ${X_CFLAGS}
noinst_PROGRAMS = makestrs


